dist_man1_MANS=

if BUILD_BITSILVERD
  dist_man1_MANS+=bitsilverd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitsilver-qt.1
endif

if BUILD_BITSILVER_CLI
  dist_man1_MANS+=bitsilver-cli.1
endif

if BUILD_BITSILVER_TX
  dist_man1_MANS+=bitsilver-tx.1
endif

if ENABLE_WALLET
if BUILD_BITSILVER_WALLET
  dist_man1_MANS+=bitsilver-wallet.1
endif
endif
